# web3-practice

./: .gitignore  .gitmodules  .pre-commit-config.yaml  pyproject.toml
contracts/auto-escrow-contracts/: foundry.toml  remappings.txt
contracts/auto-escrow-contracts/cache/: solidity-files-cache.json
contracts/auto-escrow-contracts/interfaces/: ICarNFT.sol
contracts/auto-escrow-contracts/libraries/: Errors.sol  Roles.sol
contracts/auto-escrow-contracts/src/: CarNFT.sol
infrastructure/.github/workflows/: backend.yaml  contracts.yaml
