[project]
name = "web3"
version = "0.1.0"
description = ""
authors = [
    {name = "OleksandrYanchar",email = "contact.oleksandryanchar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
package-mode = false

dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

